# mcp-patch

./: README.md  pyproject.toml
mcp_patch/: __init__.py  checks.py  cli.py  scanner.py
tests/: test_scanner.py
tests/fixtures/: clean_server.py  vulnerable_server.py
